# itmm-aads-lab3-arithmetic-expression-2025

./: .gitignore  README.md
include/: tstack.h
samples/: sample_expression.cpp
solutions/BasalaevD/: CMakeLists.txt
solutions/BasalaevD/include/: tstack.h
solutions/BasalaevD/src/: expressionanalyzer.cpp
solutions/BasalaevD/test/: test_texpressionanalyzer.cpp  test_tstack.cpp
solutions/BondarenkoA/include/: texpressionanalyzer.h  tstack.h
solutions/BondarenkoA/src/: expressionanalyzer.cpp
solutions/BondarenkoA/test/: test_texpressionanalyzer.cpp  test_tstack.cpp
solutions/GerasimenkoA/include/: texpressionanalyzer.h  tstack.h
solutions/GerasimenkoA/src/: expressionanalyzer.cpp
solutions/GerasimenkoA/test/: test_texpressionanalyzer.cpp  test_tstack.cpp
solutions/MamadjonovS/: CMakeLists.txt
solutions/MamadjonovS/include/: texpressionanalyzer.h  tstack.h
solutions/MamadjonovS/samples/: sample_expression.cpp
solutions/MamadjonovS/src/: expressionanalyzer.cpp
solutions/MamadjonovS/test/: test_texpressionanalyzer.cpp  test_tstack.cpp
